[gd_scene load_steps=42 format=2]

[ext_resource path="res://GreenCylinder.gd" type="Script" id=1]
[ext_resource path="res://Label_ITOW.gd" type="Script" id=2]
[ext_resource path="res://Label_Camera.gd" type="Script" id=3]
[ext_resource path="res://Panel_UIControls.gd" type="Script" id=4]
[ext_resource path="res://Label_FlySpeed.gd" type="Script" id=5]
[ext_resource path="res://GreenCheckerboard.png" type="Texture" id=6]
[ext_resource path="res://Gary.tscn" type="PackedScene" id=7]
[ext_resource path="res://LOScriptReplayer.tscn" type="PackedScene" id=8]
[ext_resource path="res://LowPolyHorseScene.tscn" type="PackedScene" id=9]
[ext_resource path="res://LowPolyCar.tscn" type="PackedScene" id=10]
[ext_resource path="res://LowPolySpaceship.tscn" type="PackedScene" id=11]
[ext_resource path="res://Triangle.tscn" type="PackedScene" id=12]
[ext_resource path="res://LowPolyPlane.tscn" type="PackedScene" id=13]
[ext_resource path="res://CameraRig.tscn" type="PackedScene" id=14]
[ext_resource path="res://eegg/EEgg.tscn" type="PackedScene" id=15]
[ext_resource path="res://Background.tscn" type="PackedScene" id=16]
[ext_resource path="res://CheckBox_Pause.gd" type="Script" id=17]
[ext_resource path="res://Main.gd" type="Script" id=18]
[ext_resource path="res://ProgressBar_Replay.gd" type="Script" id=19]
[ext_resource path="res://Weight.tscn" type="PackedScene" id=20]
[ext_resource path="res://CheckBox_ShowControls.gd" type="Script" id=21]
[ext_resource path="res://CheckBox_ShowInfo.gd" type="Script" id=22]

[sub_resource type="PrismMesh" id=1]
size = Vector3( 1, 2, 5 )

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
albedo_color = Color( 0.909804, 0, 1, 0.556863 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.5, 0.5, 0.5, 1 )
albedo_texture = ExtResource( 6 )
uv1_scale = Vector3( 1000, 1000, 1000 )

[sub_resource type="CubeMesh" id=4]
material = SubResource( 3 )
size = Vector3( 2000, 1, 2000 )

[sub_resource type="ConvexPolygonShape" id=5]
points = PoolVector3Array( -1000, 0.5, 1000, 1000, 0.5, -1000, 1000, 0.5, 1000, -1000, 0.5, -1000, -1000, -0.5, 1000, 1000, -0.5, -1000, 1000, -0.5, 1000, -1000, -0.5, -1000, 1000, 0.5, 1000, -1000, 0.5, -1000, 1000, 0.5, -1000, -1000, 0.5, 1000, 1000, -0.5, 1000, -1000, -0.5, -1000, 1000, -0.5, -1000, -1000, -0.5, 1000, 1000, 0.5, 1000, -1000, -0.5, 1000, -1000, 0.5, 1000, 1000, -0.5, 1000, 1000, 0.5, -1000, -1000, -0.5, -1000, -1000, 0.5, -1000, 1000, -0.5, -1000 )

[sub_resource type="SpatialMaterial" id=6]
params_specular_mode = 4
albedo_color = Color( 0, 0, 0, 1 )
emission_enabled = true
emission = Color( 0, 1, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="CubeMesh" id=7]
material = SubResource( 6 )
size = Vector3( 70, 42, 2 )

[sub_resource type="SpatialMaterial" id=8]
params_specular_mode = 4
albedo_color = Color( 0, 0, 0, 0 )
emission_enabled = true
emission = Color( 0, 1, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="CylinderMesh" id=9]
material = SubResource( 8 )
top_radius = 0.25
bottom_radius = 0.25
height = 4.0
radial_segments = 8
rings = 1

[sub_resource type="SpatialMaterial" id=10]
albedo_color = Color( 0.172549, 0.235294, 0.196078, 1 )

[sub_resource type="CylinderMesh" id=11]
material = SubResource( 10 )
top_radius = 0.001
bottom_radius = 0.3
height = 30.0
radial_segments = 8
rings = 1

[sub_resource type="SpatialMaterial" id=12]
albedo_color = Color( 0.156863, 0.458824, 0.137255, 1 )

[sub_resource type="CylinderMesh" id=13]
material = SubResource( 12 )
top_radius = 0.001
bottom_radius = 5.0
height = 28.0
radial_segments = 16
rings = 1

[sub_resource type="CubeMesh" id=14]
size = Vector3( 20, 7, 13 )

[sub_resource type="SpatialMaterial" id=15]
albedo_color = Color( 0.529412, 0.219608, 0.219608, 1 )

[sub_resource type="PrismMesh" id=16]
size = Vector3( 16, 5, 22 )

[sub_resource type="PrismMesh" id=17]
size = Vector3( 7, 2, 9.5 )

[sub_resource type="SpatialMaterial" id=18]
albedo_color = Color( 0.529412, 0.219608, 0.219608, 1 )

[sub_resource type="CubeMesh" id=19]
material = SubResource( 18 )
size = Vector3( 5, 3, 7.5 )

[node name="Main" type="Node"]
pause_mode = 2
script = ExtResource( 18 )

[node name="FirstPerson" parent="." instance=ExtResource( 7 )]
pause_mode = 2
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 7 )

[node name="Panel_ShowControls" type="Panel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -260.0
margin_top = -1.0
margin_right = 6.10352e-05
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox_ShowControls" type="CheckBox" parent="Panel_ShowControls"]
pause_mode = 2
margin_right = 123.0
margin_bottom = 24.0
pressed = true
text = "Show controls"
script = ExtResource( 21 )

[node name="CheckBox_ShowInfo" type="CheckBox" parent="Panel_ShowControls"]
pause_mode = 2
margin_left = 125.0
margin_right = 149.0
margin_bottom = 24.0
pressed = true
text = "Show info"
script = ExtResource( 22 )

[node name="Panel_UIControls" type="Panel" parent="."]
pause_mode = 2
anchor_left = 1.0
anchor_right = 1.0
margin_left = -260.0
margin_top = 20.0
margin_bottom = 335.0
rect_pivot_offset = Vector2( 85.0426, 92 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox_Pause" type="CheckBox" parent="Panel_UIControls"]
anchor_right = 0.014
margin_right = 189.466
margin_bottom = 24.0
pressed = true
text = "Pause"
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox_Ground" type="CheckBox" parent="Panel_UIControls"]
margin_top = 20.0
margin_right = 117.0
margin_bottom = 48.0
pressed = true
text = "Ground"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox_GreenScreen" type="CheckBox" parent="Panel_UIControls"]
margin_left = 125.0
margin_right = 243.841
margin_bottom = 24.0
text = "Green screen"

[node name="CheckBox_GreenCylinder" type="CheckBox" parent="Panel_UIControls"]
margin_left = 125.0
margin_top = 20.0
margin_right = 259.0
margin_bottom = 44.0
text = "Green cylinder"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Objects" type="Label" parent="Panel_UIControls"]
margin_top = 46.0
margin_right = 123.0
margin_bottom = 60.0
text = "Objects:"

[node name="CheckBox_Object_Triangle" type="CheckBox" parent="Panel_UIControls"]
margin_top = 60.0
margin_right = 114.0
margin_bottom = 84.0
pressed = true
text = "Triangle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox_Object_Car" type="CheckBox" parent="Panel_UIControls"]
margin_top = 80.0
margin_right = 105.0
margin_bottom = 104.0
text = "Car"

[node name="CheckBox_Object_Car_Big" type="CheckBox" parent="Panel_UIControls"]
margin_top = 100.0
margin_right = 105.0
margin_bottom = 124.0
text = "Big car"

[node name="CheckBox_Object_Horse" type="CheckBox" parent="Panel_UIControls"]
margin_left = 6.10352e-05
margin_top = 120.62
margin_right = 66.0001
margin_bottom = 144.62
text = "Horse"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox_Object_HorseSideways" type="CheckBox" parent="Panel_UIControls"]
margin_left = 6.10352e-05
margin_top = 140.62
margin_right = 128.0
margin_bottom = 164.62
text = "Horse sideways"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox_Object_Aeroplane" type="CheckBox" parent="Panel_UIControls"]
margin_left = 6.10352e-05
margin_top = 160.62
margin_right = 93.0001
margin_bottom = 184.62
text = "Aeroplane"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox_Object_Spaceship" type="CheckBox" parent="Panel_UIControls"]
margin_left = 6.10352e-05
margin_top = 180.62
margin_right = 92.0001
margin_bottom = 204.62
text = "Spaceship"

[node name="CheckBox_Object_Weights" type="CheckBox" parent="Panel_UIControls"]
margin_left = 6.10352e-05
margin_top = 200.62
margin_right = 115.0
margin_bottom = 224.62
text = "Weights"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_TimeShiftedObjects" type="Label" parent="Panel_UIControls"]
margin_left = 112.0
margin_top = 46.0
margin_right = 256.0
margin_bottom = 60.0
text = "Timeshifted objects:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox_Timeshift_Triangle" type="CheckBox" parent="Panel_UIControls"]
margin_left = 125.0
margin_top = 60.0
margin_right = 203.0
margin_bottom = 84.0
text = "Triangle"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox_Timeshift_Car" type="CheckBox" parent="Panel_UIControls"]
margin_left = 125.0
margin_top = 80.0
margin_right = 230.0
margin_bottom = 104.0
pressed = true
text = "Car"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox_Timeshift_Car_Big" type="CheckBox" parent="Panel_UIControls"]
margin_left = 125.0
margin_top = 100.0
margin_right = 230.0
margin_bottom = 124.0
text = "Big car"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox_Timeshift_Horse" type="CheckBox" parent="Panel_UIControls"]
margin_left = 125.0
margin_top = 120.62
margin_right = 191.0
margin_bottom = 144.62
text = "Horse"

[node name="CheckBox_Timeshift_HorseSideways" type="CheckBox" parent="Panel_UIControls"]
margin_left = 125.0
margin_top = 140.62
margin_right = 253.0
margin_bottom = 164.62
text = "Horse sideways"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox_Timeshift_Aeroplane" type="CheckBox" parent="Panel_UIControls"]
margin_left = 125.0
margin_top = 160.62
margin_right = 218.0
margin_bottom = 184.62
text = "Aeroplane"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox_Timeshift_Spaceship" type="CheckBox" parent="Panel_UIControls"]
margin_left = 125.0
margin_top = 180.62
margin_right = 217.0
margin_bottom = 204.62
text = "Spaceship"

[node name="CheckBox_Timeshift_Weights" type="CheckBox" parent="Panel_UIControls"]
margin_left = 125.0
margin_top = 200.62
margin_right = 239.0
margin_bottom = 224.62
text = "Weights"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Timeshift" type="Label" parent="Panel_UIControls"]
margin_left = 2.24493
margin_top = 227.783
margin_right = 103.245
margin_bottom = 244.783
text = "Timeshift (ms):"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBox_Timeshift" type="SpinBox" parent="Panel_UIControls"]
margin_left = 105.0
margin_top = 223.783
margin_right = 243.0
margin_bottom = 247.783
min_value = -1e+06
max_value = 1e+06
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox_3DModelInfo" type="CheckBox" parent="Panel_UIControls"]
pause_mode = 2
margin_left = 6.10352e-05
margin_top = 290.0
margin_right = 257.0
margin_bottom = 294.565
text = "Show 3D-model license information"

[node name="SpinBox_Dataset" type="SpinBox" parent="Panel_UIControls"]
margin_left = 78.2731
margin_top = 248.783
margin_right = 152.273
margin_bottom = 272.783
min_value = 1.0
max_value = 4.0
value = 1.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Dataset" type="Label" parent="Panel_UIControls"]
margin_left = 12.0001
margin_top = 252.62
margin_right = 68.0001
margin_bottom = 266.62
text = "Dataset:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox_UseVisibilityScript" type="CheckBox" parent="Panel_UIControls"]
margin_top = 270.0
margin_right = 257.0
margin_bottom = 274.62
text = "Visibility script"

[node name="Panel_AdditionalInfo" type="Panel" parent="."]
pause_mode = 2
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -400.0
margin_top = -116.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Camera" type="Label" parent="Panel_AdditionalInfo"]
margin_left = 13.0
margin_top = 7.51233
margin_right = 276.0
margin_bottom = 29.5123
text = "Camera"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_FlySpeed" type="Label" parent="Panel_AdditionalInfo"]
margin_left = 12.0636
margin_top = 32.3898
margin_right = 92.0636
margin_bottom = 46.3898
text = "Flying speed"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_ITOW" type="Label" parent="Panel_AdditionalInfo"]
margin_left = 12.0
margin_top = 56.0
margin_right = 138.0
margin_bottom = 72.0
rect_scale = Vector2( 3, 3 )
text = "ITOW"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar_Replay" type="ProgressBar" parent="Panel_AdditionalInfo"]
margin_left = 0.89093
margin_top = 100.0
margin_right = 398.891
margin_bottom = 114.0
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel_3DModelLicenseInfo" type="Panel" parent="."]
margin_right = 695.0
margin_bottom = 347.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_3DModelLicenseInfo" type="Label" parent="Panel_3DModelLicenseInfo"]
margin_left = 6.0
margin_top = 3.0
margin_right = 689.0
margin_bottom = 334.0
text = "This project uses these 3D-models:

'Low Poly Horse' by sketchfab user 'Nioma van der Steen' (https://sketchfab.com/fromthestone):
https://sketchfab.com/3d-models/low-poly-horse-c8778532ab804fc18cae6a0e20feffd3

'Low-Poly Car' by sketchfab user 'Lawrence Pompey' (https://sketchfab.com/imaginerd3d):
https://sketchfab.com/3d-models/low-poly-car-3bee85b8530046e5bb11a57965129187

'Low Poly Plane' by sketchfab user 'scailman' (https://sketchfab.com/scailman):
https://sketchfab.com/3d-models/low-poly-plane-76230052903540e9aeb46b7db35329e4

'Pixel Low Poly Spaceship' by sketchfab user 'Tony' (https://sketchfab.com/tony_zerobudgetgames):
https://sketchfab.com/3d-models/pixel-low-poly-spaceship-eaad1ae4bf6a43fd9f3a80400dacbbfd

All the 3D-models above have Creative Commons Attribution license (CC-BY) by their owners. Full terms at https://creativecommons.org/licenses/by/4.0/

(The aforementioned license does not apply to the project built using Godot game engine. Game engine project is licensed under MIT-license (see the file \"LICENSE\" on the project folder).)"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.936268, -0.304932, 0.17441, 0.103808, 0.714482, 0.69191, -0.335598, -0.629708, 0.700601, 0, 10, 0 )
light_energy = 3.05
light_indirect_energy = 0.0
light_specular = 0.81
shadow_enabled = true

[node name="GroundZero" type="MeshInstance" parent="."]
transform = Transform( -1, -3.25841e-07, 5.30863e-14, 0, -1.62921e-07, -1, 3.25841e-07, -1, 1.62921e-07, 0, 2.5, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Background" parent="." instance=ExtResource( 16 )]

[node name="Ground" type="StaticBody" parent="."]
transform = Transform( 0.999391, -0.0348995, 0, 0.0348995, 0.999391, 0, 0, 0, 1, 0, -0.563, 0 )

[node name="GroundMeshInstance" type="MeshInstance" parent="Ground"]
mesh = SubResource( 4 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 5 )

[node name="EEgg" parent="." instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 110 )

[node name="LOSolver_Object" parent="." instance=ExtResource( 8 )]

[node name="Triangle" parent="LOSolver_Object" instance=ExtResource( 12 )]

[node name="Car" parent="LOSolver_Object" instance=ExtResource( 10 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, -0.5, 0 )

[node name="Car_Big" parent="LOSolver_Object" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )
visible = false

[node name="Horse" parent="LOSolver_Object" instance=ExtResource( 9 )]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, -0.054, -0.863, 0.2 )
visible = false

[node name="Horse_Sideways" parent="LOSolver_Object" instance=ExtResource( 9 )]
transform = Transform( 0.987055, 0.160381, 0, -0.160381, 0.987055, 0, 0, 0, 1, -0.241781, -0.897645, 0.125785 )

[node name="Aeroplane" parent="LOSolver_Object" instance=ExtResource( 13 )]
visible = false

[node name="Spaceship" parent="LOSolver_Object" instance=ExtResource( 11 )]
transform = Transform( -0.1, 0, 0, 0, 0.1, 0, 0, 0, -0.1, 0, -0.2, 0.0729586 )
visible = false

[node name="ObjectCamera" type="Camera" parent="LOSolver_Object"]
transform = Transform( 1, 0, 0, 0, 0.934466, 0.356053, 0, -0.356053, 0.934466, 0, 0.772761, 2.47205 )
current = true
far = 1000.0

[node name="Weights" parent="LOSolver_Object" instance=ExtResource( 20 )]

[node name="LOSolver_TimeShift" parent="." instance=ExtResource( 8 )]
quatInterpolationDebugOutput = true
quatInterpolationMethod = 5

[node name="Triangle" parent="LOSolver_TimeShift" instance=ExtResource( 12 )]

[node name="Car" parent="LOSolver_TimeShift" instance=ExtResource( 10 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, -0.5, 0 )
visible = false

[node name="Car_Big" parent="LOSolver_TimeShift" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )
visible = false

[node name="Horse" parent="LOSolver_TimeShift" instance=ExtResource( 9 )]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, -0.054, -0.863, 0.2 )
visible = false

[node name="Horse_Sideways" parent="LOSolver_TimeShift" instance=ExtResource( 9 )]
transform = Transform( 0.987055, 0.160381, 0, -0.160381, 0.987055, 0, 0, 0, 1, -0.241781, -0.897645, 0.125785 )

[node name="Aeroplane" parent="LOSolver_TimeShift" instance=ExtResource( 13 )]
visible = false

[node name="Spaceship" parent="LOSolver_TimeShift" instance=ExtResource( 11 )]
transform = Transform( -0.1, 0, 0, 0, 0.1, 0, 0, 0, -0.1, 0, -0.2, 0.0729586 )
visible = false

[node name="Weights" parent="LOSolver_TimeShift" instance=ExtResource( 20 )]

[node name="LOSolver_Camera" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.46194, 5.06226 )

[node name="RigCamera" type="Camera" parent="LOSolver_Camera"]
transform = Transform( 1, 0, 0, 0, 0.999657, 0.026177, 0, -0.026177, 0.999657, 0, 0, 0 )
fov = 42.0
far = 1000.0

[node name="GreenScreen" type="MeshInstance" parent="LOSolver_Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -50 )
cast_shadow = 0
mesh = SubResource( 7 )
material/0 = null

[node name="CameraRig" parent="LOSolver_Camera" instance=ExtResource( 14 )]

[node name="GreenCylinder" type="MeshInstance" parent="."]
visible = false
cast_shadow = 0
mesh = SubResource( 9 )
material/0 = null
script = ExtResource( 1 )

[node name="LowPolyCar_Parked" parent="." instance=ExtResource( 10 )]
transform = Transform( -0.186987, 0, -0.982362, 0, 1, 0, 0.982362, 0, -0.186987, 0.538, -0.0552456, -3.495 )

[node name="Spruce" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -11.75, -0.661975, 13.2 )

[node name="Trunk" type="MeshInstance" parent="Spruce"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 15, 0 )
cast_shadow = 0
mesh = SubResource( 11 )
material/0 = null

[node name="Branches" type="MeshInstance" parent="Spruce"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 16, 0 )
cast_shadow = 0
mesh = SubResource( 13 )
material/0 = null

[node name="House" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 16.7, 3.5, 12.5 )

[node name="MeshInstance" type="MeshInstance" parent="House"]
mesh = SubResource( 14 )
material/0 = SubResource( 15 )

[node name="MeshInstance2" type="MeshInstance" parent="House"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 5.96998, 2.38419e-07 )
mesh = SubResource( 16 )
material/0 = null

[node name="MeshInstance4" type="MeshInstance" parent="House"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.81758, 0.72034, -5.88306 )
mesh = SubResource( 17 )
material/0 = null

[node name="MeshInstance3" type="MeshInstance" parent="House"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5, -1.75, -6 )
mesh = SubResource( 19 )
material/0 = null

[node name="Panel_Quat" type="Panel" parent="."]
margin_left = 1.0
margin_top = 347.714
margin_right = 411.0
margin_bottom = 459.714
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Quat" type="Label" parent="Panel_Quat"]
margin_left = 70.0
margin_top = 3.0
margin_right = 413.0
margin_bottom = 108.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_QuatHeader" type="Label" parent="Panel_Quat"]
margin_top = 3.0
margin_right = 65.0
margin_bottom = 107.0
text = "Quats:
pre_a:
a:
interp:
b:
post_b:"
align = 2
[connection signal="value_changed" from="Panel_UIControls/SpinBox_Dataset" to="." method="_on_SpinBox_Dataset_value_changed"]
